--- a/scraping/config.json
+++ b/scraping/config.json
@@ -1,7 +1,7 @@
 {
-	"db_host": "127.0.0.1",
-	"db_user": "root",
-	"db_password": "",
+	"db_host": "172.16.4.121",
+	"db_user": "stdev",
+	"db_password": "stdev",
 	"db_name": "verbs",
 	"db_engine": "mysql",
     "log_file": "scrape_verbix.log",
